Main validation reservation

--- a/menu.html
+++ b/menu.html
@@ -15,9 +15,10 @@
             <ul> 
                 <li><a href="index.html">Home</a></li> 
                 <li><a href="about.html">About</a></li> 
-                <li><a href="menu.html">Menu</a></li> 
+                <li><a href="menu.html" class="active">Menu</a></li> 
                 <li><a href="contact.html">Contact</a></li> 
                 <li><a href="Reservation.html">Reservation</a></li>
+                <li><a href="reservation-validation.html" class="admin-link" title="Admin Only">🔒 Admin</a></li>
             </ul> 
         </nav> 
     </header> 
@@ -52,24 +53,28 @@
         <div class="menu-grid">
 
             <div class="menu-card">
+                <img src="images/lablabi.jpg" alt="Lablabi">
                 <h3>Lablabi</h3>
                 <p>Traditional chickpea soup with harissa, olive oil, capers, and crusty bread</p>
                 <span class="price">AED 54</span>
             </div>
 
             <div class="menu-card">
+                <img src="images/brik.jpg" alt="Brik à l'Oeuf">
                 <h3>Brik à l'Oeuf</h3>
                 <p>Crispy pastry filled with egg, tuna, capers, and parsley</p>
                 <span class="price">AED 31</span>
             </div>
 
             <div class="menu-card">
+                <img src="images/mechouia-salad.jpg" alt="Mechouia Salad">
                 <h3>Mechouia Salad</h3>
                 <p>Grilled pepper and tomato salad with tuna, olive oil, and spices</p>
                 <span class="price">AED 37</span>
             </div>
 
             <div class="menu-card">
+                <img src="images/harissa-olives.jpg" alt="Harissa & Olive Platter">
                 <h3>Harissa & Olive Platter</h3>
                 <p>House-made harissa with assorted Tunisian olives and warm bread</p>
                 <span class="price">AED 19</span>
@@ -83,36 +88,42 @@
         <div class="menu-grid">
 
             <div class="menu-card">
+                <img src="images/couscous-royal.jpg" alt="Couscous Royal">
                 <h3>Couscous Royal</h3>
                 <p>Traditional couscous with lamb, merguez, chicken, and seasonal vegetables</p>
                 <span class="price">AED 40</span>
             </div>
 
             <div class="menu-card">
+                <img src="images/couscous-poisson.jpg" alt="Couscous Poisson">
                 <h3>Couscous Poisson</h3>
                 <p>Fish couscous with sea bass, grouper, and spicy fish broth</p>
                 <span class="price">AED 65</span>
             </div>
 
             <div class="menu-card">
+                <img src="images/ojja-merguez.jpg" alt="Ojja Merguez">
                 <h3>Ojja Merguez</h3>
                 <p>Spicy tomato stew with merguez sausage, bell peppers, and poached eggs</p>
                 <span class="price">AED 45</span>
             </div>
 
             <div class="menu-card">
+                <img src="images/molokhia.jpg" alt="Molokhia">
                 <h3>Molokhia</h3>
                 <p>Slow-cooked jute leaves with lamb, aromatic spices, and rice</p>
                 <span class="price">AED 62</span>
             </div>
 
             <div class="menu-card">
+                <img src="images/kamounia.jpg" alt="Kamounia">
                 <h3>Kamounia</h3>
                 <p>Beef stew with cumin, tomatoes, chickpeas, and warm spices</p>
                 <span class="price">AED 45</span>
             </div>
 
             <div class="menu-card">
+                <img src="images/tajine-tunisien.jpg" alt="Tajine Tunisien">
                 <h3>Tajine Tunisien</h3>
                 <p>Baked egg dish with lamb, cheese, vegetables, and Tunisian spices</p>
                 <span class="price">AED 35</span>
@@ -126,24 +137,28 @@
         <div class="menu-grid">
 
             <div class="menu-card">
+                <img src="images/makroud.jpg" alt="Makroud">
                 <h3>Makroud</h3>
                 <p>Semolina cookies filled with dates, fried and soaked in honey</p>
                 <span class="price">AED 19</span>
             </div>
 
             <div class="menu-card">
+                <img src="images/baklawa-tunisien.jpg" alt="Baklawa Tunisien">
                 <h3>Baklawa Tunisien</h3>
                 <p>Crispy phyllo with almonds, honey, and orange blossom</p>
                 <span class="price">AED 12</span>
             </div>
 
             <div class="menu-card">
+                <img src="images/assida-zgougou.jpg" alt="Assida Zgougou">
                 <h3>Assida Zgougou</h3>
                 <p>Pine-nut pudding topped with cream</p>
                 <span class="price">AED 31</span>
             </div>
 
             <div class="menu-card">
+                <img src="images/zlebia.jpg" alt="Zlebia">
                 <h3>Zlebia</h3>
                 <p>Deep-fried dough soaked in honey syrup with rose water</p>
                 <span class="price">AED 21</span>
