--- a/about.html
+++ b/about.html
@@ -7,10 +7,11 @@
         <nav> 
             <ul> 
                 <li><a href="index.html">Home</a></li> 
-                <li><a href="about.html">About</a></li> 
+                <li><a href="about.html" class="active">About</a></li> 
                 <li><a href="menu.html">Menu</a></li> 
                 <li><a href="contact.html">Contact</a></li> 
                 <li><a href="reservation.html">Reservation</a></li>
+                <li><a href="reservation-validation.html" class="admin-link" title="Admin Only">🔒 Admin</a></li>
             </ul> 
         </nav> 
     </header>
