--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,9 @@
                 <li><a href="index.html">Home</a></li> 
                 <li><a href="about.html">About</a></li> 
                 <li><a href="menu.html">Menu</a></li> 
-                <li><a href="contact.html">Contact</a></li> 
+                <li><a href="contact.html" class="active">Contact</a></li> 
                 <li><a href="reservation.html">Reservation</a></li>
+                <li><a href="reservation-validation.html" class="admin-link" title="Admin Only">🔒 Admin</a></li>
             </ul> 
         </nav> 
     </header>
