--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
 
         <nav> 
             <ul> 
-                <li><a href="index.html">Home</a></li> 
+                <li><a href="index.html" class="active">Home</a></li> 
                 <li><a href="about.html">About</a></li> 
                 <li><a href="menu.html">Menu</a></li> 
                 <li><a href="contact.html">Contact</a></li> 
                 <li><a href="reservation.html">Reservation</a></li>
+                <li><a href="reservation-validation.html" class="admin-link" title="Admin Only">🔒 Admin</a></li>
             </ul> 
         </nav>
     </header> 
