--- a/reservation.html
+++ b/reservation.html
@@ -16,7 +16,8 @@
                 <li><a href="about.html">About</a></li> 
                 <li><a href="menu.html">Menu</a></li> 
                 <li><a href="contact.html">Contact</a></li> 
-                <li><a href="reservation.html">Reservation</a></li>
+                <li><a href="reservation.html" class="active">Reservation</a></li>
+                <li><a href="reservation-validation.html" class="admin-link" title="Admin Only">🔒 Admin</a></li>
             </ul> 
         </nav> 
     </header> 
