--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html> 
 <html lang="en"> 
 <head> 
-    <header class="menu-header"> 
-        <img src="logo.png" class="logo" alt="Logo" style="width:200px; height:200px; border-radius:50%;">
-        <h1>Contact Us</h1> 
-        <nav> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Contact Us - Red Harissa Restaurant</title> 
+    <link rel="stylesheet" href="style.css"> 
+</head> 
+<body> 
+    <!-- Header -->
+    <header class="contact-header">
+        <nav class="main-nav"> 
             <ul> 
                 <li><a href="index.html">Home</a></li> 
                 <li><a href="about.html">About</a></li> 
@@ -13,48 +18,148 @@
                 <li><a href="reservation.html">Reservation</a></li>
                 <li><a href="reservation-validation.html" class="admin-link" title="Admin Only">🔒 Admin</a></li>
             </ul> 
-        </nav> 
+        </nav>
+
+        <div class="header-content">
+            <img src="logo.png" class="header-logo" alt="Red Harissa Logo">
+            <h1>Contact Us</h1>
+            <p>We'd love to hear from you. Get in touch with Red Harissa today.</p>
+        </div>
     </header>
-    <meta charset="UTF-8"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Contact</title> 
-    <link rel="stylesheet" href="style.css"> 
-</head> 
-<body> 
-     <a href="reservation.html" class="reserve-btn">Reserve a Table</a>
-<main>
-    <section>
-      <h2>Get in Touch</h2>
-      <p>Email us at <strong>RedHarissa@restaurant.com</strong></p>
+
+    <a href="reservation.html" class="reserve-btn">Reserve a Table</a>
+
+    <!-- Contact Information Section -->
+    <section class="contact-info-section">
+        <div class="container">
+            <h2>Get in Touch</h2>
+            <div class="contact-grid">
+                <div class="contact-card">
+                    <span class="contact-icon">📧</span>
+                    <h3>Email</h3>
+                    <p>
+                        <a href="mailto:RedHarissa@restaurant.com">RedHarissa@restaurant.com</a>
+                    </p>
+                    <p class="contact-desc">We'll respond within 24 hours</p>
+                </div>
+
+                <div class="contact-card">
+                    <span class="contact-icon">📞</span>
+                    <h3>Phone</h3>
+                    <p>
+                        <a href="tel:+971551234567">+971 55 123 4567</a>
+                    </p>
+                    <p class="contact-desc">Call us Monday to Sunday, 12pm-11pm</p>
+                </div>
+
+                <div class="contact-card">
+                    <span class="contact-icon">📍</span>
+                    <h3>Location</h3>
+                    <p>Downtown Dubai<br>Burj Khalifa Area</p>
+                    <p class="contact-desc">In the heart of Dubai</p>
+                </div>
+
+                <div class="contact-card">
+                    <span class="contact-icon">🕐</span>
+                    <h3>Hours</h3>
+                    <p>Mon - Sun: 12:00 PM - 11:00 PM<br>Friday: 1:00 PM - 11:00 PM</p>
+                    <p class="contact-desc">We're open year-round</p>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <section>
-      <h2>Find Us — Downtown Dubai (Burj Khalifa)</h2>
-      <p>We're pinned in Downtown Dubai — Burj Khalifa area.</p>
-<section>
-    <h2>Get in Touch</h2>
-    <p>Email us at <strong>RedHarissa@restaurant.com</strong></p>
-    <p>📞 Phone: <strong>+971 55 123 4567</strong></p>
-</section>
-
-     
-      <div class="map-wrapper">
-        <iframe
-          src="https://www.google.com/maps?q=25.197525,55.274288&hl=en&z=17&output=embed"
-          width="100%"
-          height="450"
-          style="border:0;"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-      </div>
+    <!-- Map Section -->
+    <section class="map-section">
+        <div class="container">
+            <h2>Find Us on the Map</h2>
+            <p class="section-subtitle">Visit our restaurant in Downtown Dubai, near the iconic Burj Khalifa</p>
+            <div class="map-wrapper">
+                <iframe
+                    src="https://www.google.com/maps?q=25.197525,55.274288&hl=en&z=17&output=embed"
+                    width="100%"
+                    height="500"
+                    style="border:0; border-radius: 12px;"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+        </div>
     </section>
-  </main>
- 
-    <footer> 
-        <p>&copy; 2025 Red Harissa Restaurant. All Rights Reserved.</p> 
-    </footer> 
+
+    <!-- Contact Form Section -->
+    <section class="contact-form-section">
+        <div class="container">
+            <h2>Send us a Message</h2>
+            <div class="form-wrapper">
+                <form class="contact-form">
+                    <div class="form-group">
+                        <label for="name">Your Name</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email">Email Address</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="phone">Phone Number</label>
+                        <input type="tel" id="phone" name="phone">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="subject">Subject</label>
+                        <input type="text" id="subject" name="subject" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" rows="5" required></textarea>
+                    </div>
+
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!-- CTA Section -->
+    <section class="cta-section">
+        <div class="container">
+            <h2>Ready to dine with us?</h2>
+            <p>Book your table now and experience authentic Tunisian cuisine</p>
+            <a href="reservation.html" class="cta-button">Make a Reservation</a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h4>Red Harissa</h4>
+                <p>Authentic Tunisian cuisine with a contemporary touch</p>
+            </div>
+            <div class="footer-section">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="reservation.html">Reservations</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Contact</h4>
+                <p>Phone: (555) 123-4567</p>
+                <p>Email: info@redharissa.com</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Red Harissa Restaurant. All Rights Reserved.</p>
+        </div>
+    </footer>
  
 </body> 
 </html> 
