Final updates: centered reservation form and updated documentation

--- a/reservation.html
+++ b/reservation.html
@@ -168,13 +168,13 @@
         </div>
     </footer>
 
-    <!-- 🔥 FIREBASE + FIRESTORE INTEGRATION -->
+    <!-- FIREBASE + FIRESTORE INTEGRATION -->
     <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
       import { getFirestore, collection, addDoc, Timestamp } 
       from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-      // ✅ YOUR REAL FIREBASE CONFIG
+      //  REAL FIREBASE CONFIG
       const firebaseConfig = {
         apiKey: "AIzaSyCkEntQq8LebGepdzZ9cTnk6L369SKCTDI",
         authDomain: "redharissa-7954c.firebaseapp.com",
